--- a/MarsExploration/MarsExploration.vcxproj
+++ b/MarsExploration/MarsExploration.vcxproj
@@ -143,7 +143,8 @@
     <ClInclude Include="LinkedQueue.h" />
     <ClInclude Include="ListADT.h" />
     <ClInclude Include="Node.h" />
-    <ClInclude Include="priorityQueue.h" />
+    <ClInclude Include="PNode.h" />
+    <ClInclude Include="PriorityQueue.h" />
     <ClInclude Include="QueueADT.h" />
   </ItemGroup>
   <ItemGroup>
