--- a/MarsExploration/MarsExploration.vcxproj
+++ b/MarsExploration/MarsExploration.vcxproj
@@ -146,9 +146,12 @@
     <ClInclude Include="PNode.h" />
     <ClInclude Include="PriorityQueue.h" />
     <ClInclude Include="QueueADT.h" />
+    <ClInclude Include="Rover.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="Rover.cpp" />
+    <ClCompile Include="Source.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
