Connected mission with rover

--- a/MarsExploration/MarsExploration.vcxproj.filters
+++ b/MarsExploration/MarsExploration.vcxproj.filters
@@ -98,5 +98,8 @@
     <ClCompile Include="MountainuousMission.cpp">
       <Filter>Mission Classes</Filter>
     </ClCompile>
+    <ClCompile Include="Mission.cpp">
+      <Filter>Mission Classes</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
