--- a/MarsExploration/MarsExploration.vcxproj
+++ b/MarsExploration/MarsExploration.vcxproj
@@ -159,6 +159,7 @@
   <ItemGroup>
     <ClCompile Include="EmergencyMission.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="Mission.cpp" />
     <ClCompile Include="Rover.cpp" />
     <ClCompile Include="MountainuousMission.cpp" />
     <ClCompile Include="PolarMissions.cpp" />
