--- a/MarsExploration/MarsExploration.vcxproj
+++ b/MarsExploration/MarsExploration.vcxproj
@@ -155,6 +155,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="MarsStation.cpp" />
     <ClCompile Include="Mission.cpp" />
     <ClCompile Include="Rover.cpp" />
   </ItemGroup>
