--- a/MarsExploration/MarsExploration.vcxproj.filters
+++ b/MarsExploration/MarsExploration.vcxproj.filters
@@ -34,6 +34,9 @@
     <Filter Include="MarsStation">
       <UniqueIdentifier>{490ab110-54d2-47f9-b4d4-8889961ad9cc}</UniqueIdentifier>
     </Filter>
+    <Filter Include="UI">
+      <UniqueIdentifier>{926ab81e-12c1-4ca4-ac78-522db5bdba08}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="QueueADT.h">
@@ -82,7 +85,7 @@
       <Filter>DataStructures\Interfaces</Filter>
     </ClInclude>
     <ClInclude Include="UI.h">
-      <Filter>Header Files</Filter>
+      <Filter>UI</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -111,7 +114,7 @@
       <Filter>MarsStation</Filter>
     </ClCompile>
     <ClCompile Include="UI.cpp">
-      <Filter>Header Files</Filter>
+      <Filter>UI</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
